--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
         </div>
     </div>
 
+    <!--TABLE DISPLAYING INFO-->
+    <table class="table table-light mt-3 currentSpaceships" id="table">
+        <thead>
+            <tr>
+                <th scope="col">Spaceship Name</th>
+                <th scope="col">Destination</th>
+                <th scope="col">Frequency (min.)</th>
+                <th scope="col">Next Arrival</th>
+                <th scope="col">Minutes Away</th>
+            </tr>
+        </thead>
+    </table>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="assets/scheduler.js"></script>
