--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </div>
         <div class="form-group pl-3 pr-3 font-weight-bold">
             <label for="time">First Spaceship Time (HH:mm - Military Time)</label>
-            <input type="HH:mm" class="form-control" id="spaceship-time">
+            <input type="time" class="form-control" id="spaceship-arrival">
         </div>
         <div class="form-group pl-3 pr-3 font-weight-bold">
             <label for="frequency">Frequency (min)</label>
-            <input type="number" class="form-control" id="frequency">
+            <input type="time" class="form-control" id="frequency">
         </div>
         <button type="submit" class="btn btn-primary m-3 font-weight-bold" id="submission">Submit</button>
     </form>
