Centered the text on my jumbotron

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
 
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid" id="jumbotron">
             <div class="container">
                 <h1 class="display-4">Welcome to Starship Station!</h1>
                 <p class="lead">The Universe is Waiting</p>
